# MLops_Project_Group_49

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cloudbuild.yaml  dvc_fetch_log.txt  dvc_log.txt  dvc_push_log.txt  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py  test_log.txt
.dvc/: config
.github/workflows/: linting.yaml  pre-commit-update.yaml
Project_Group_49/: LICENSE  README.md  pyproject.toml  tasks.py
Project_Group_49/.devcontainer/: devcontainer.json
Project_Group_49/dockerfiles/: api.dockerfile  train.dockerfile
Project_Group_49/docs/: mkdocs.yaml
Project_Group_49/src/project/: train.py
Project_Group_49/tests/: test_data.py
configs/: config.yaml  sweep.yaml
data/processed/: phrasebank_AllAgree.pt
data/raw/: .gitignore
dockerfiles/: backend.dockerfile  drift.dockerfile  frontend.dockerfile  train.dockerfile
docs/source/: index.md
models/: .gitignore  text_model_AllAgree.pt  text_model_AllAgree.pt.dvc
reports/: README.md
src/project/: backend.py  data.py  evaluate.py  frontend.py  model.py  profiling.py  train.py
src/project/inference/: inference.py  scraper.py
tests/: test_api.py  test_data_preprocess.py  test_model.py
tests/performancetests/: locustfile.py
